<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vaclav.score.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_a_name" />

        <TextView
            android:id="@+id/teamAScore"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_a_score" />
        <Button
            android:id="@+id/plusOneA"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringAddOne"
            android:onClick="addOneA" />

        <Button
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringAddTwo"
            android:onClick="addTwoA" />
        <Button
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringAddThree"
            android:onClick="addThreeA" />

     </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_b_name" />

        <TextView
            android:id="@+id/teamBScore"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_b_score" />


        <Button
            android:id="@+id/plusOneB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addOneB"
            android:padding="5dp"
            android:text="@string/stringAddOne"/>
        <Button
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addTwoB"
            android:text="@string/stringAddTwo"/>
        <Button
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addThreeB"
            android:text="@string/stringAddThree"/>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset"
        android:onClick="resetScore"/>

</LinearLayout>
